# Zonda

./: README.md
Server/: Cargo.toml
Server/src/: main.rs  mesh.rs  physicsmodel.rs  simulation.rs  solver.rs  utilities.rs
Server/src/conjugate_gradient/: conjugate_gradient.rs  sparse_matrix.rs
Server/src/lu/: Readme.txt  lu.rs
Server/src/mesh/: boundary.rs  cell.rs  point.rs
Server/src/simulation/: boundary.rs  cell.rs  make.rs  parameters.rs  point.rs  segment.rs  simulation.rs
Server/src/utilities/: export_to_legacy_vtk.rs
www/: index.html  simulation.html
www/js/: viewer.js  vm-index.js  vm-simulation.js
www/jsm/: viewer.js
www/lib/: libutils.js
www/libm/threejs/: TrackballControls.js
www/vue-components/: vc-footer.js  vc-input.js  vc-navbar.js
