[package]
name = "server"
version = "0.1.0"
authors = ["Julien de Charentenay <julien.decharentenay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3.0"
serde = "1.0.116"
serde_json = "1.0.57"
uuid = { version = "0.8", features = ["serde", "v4"] }
